Fixed alignment issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
 body, html {
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
   font-family: 'Lato', sans-serif;
   scroll-behavior: smooth;
 }
